feat:reviewed until 200

--- a/problems-review/171~185.ipynb
+++ b/problems-review/171~185.ipynb
@@ -44,6 +44,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#173 L이 다음과같이 주어졌을때, 13일때 빠져나오도록 하시오 (for, in사용)\n",
+    "L = [1, 9, 4, 13, 5, 6]\n",
+    "\n",
+    "for i in L:\n",
+    "    if i == 13:\n",
+    "        print(\"found 13\")\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -105,6 +120,13 @@
     "else:\n",
     "    print(\"{} is not a prime number\".format(num))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -211,15 +233,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#182 입력된 문자열이 숫자인지 판별해주는 프로그램. ex) 167o7 => False\n",
+    "\n",
+    "n = input(\"insert digits\")\n",
+    "\n",
+    "n.isdigit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 5.72 µs\n",
+      "CPU times: user 3 µs, sys: 1 µs, total: 4 µs\n",
+      "Wall time: 23.1 µs\n",
       "199\n"
      ]
     }
@@ -238,6 +273,23 @@
     "    if num_sum == 100:\n",
     "        print(i)\n",
     "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 0\n",
+    "sum = 0\n",
+    "while sum < 100:\n",
+    "    n += 1\n",
+    "    if n % 2 ==0:\n",
+    "        sum -= n\n",
+    "    else:\n",
+    "        sum += n\n",
+    "sum, n"
    ]
   },
   {
@@ -277,6 +329,22 @@
     "    elif num % 2 == 1:\n",
     "        num_list.append(num)\n",
     "        num = 2 * num + 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = []\n",
+    "n = int(input(\"insert number\"))\n",
+    "while n > 1:\n",
+    "    a.append(n)\n",
+    "    n = n / 2 if n % 2 == 0 else 2 * n + 2\n",
+    "    \n",
+    "a.append(1)\n",
+    "len(a)"
    ]
   },
   {
