--- a/problems-review/188~200.ipynb
+++ b/problems-review/188~200.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sympy import sieve\n",
+    "print([i for i in sieve.primerange(2, 1000)])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -85,6 +95,20 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = \"Merry Christmas\"\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    for j in range(i+1):\n",
+    "        print(a[j], end = \"\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -122,6 +146,23 @@
     "        print(\"*\" + \"*\" * 2 * i)\n",
     "    else:\n",
     "        print(\"*\" + \"*\" * 2 * 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#191\n",
+    "a = \"*\"\n",
+    "\n",
+    "for i in range(11):\n",
+    "    if i <= 5:\n",
+    "        print(2 * a * i + a)\n",
+    "    else:\n",
+    "        print(a*11)\n",
+    "        "
    ]
   },
   {
@@ -244,9 +285,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[11, 13]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#196(2)\n",
     "\n",
@@ -336,6 +388,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class is_prime:\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def prime_number(n):\n",
+    "        a = []\n",
+    "\n",
+    "        for i in range(2,n):\n",
+    "\n",
+    "            if n % i == 0:\n",
+    "                a.append(n)\n",
+    "        if len(a) == 0:\n",
+    "            return True\n",
+    "            print(\"{} is a prime number!\".format(n))\n",
+    "        else:\n",
+    "            return False\n",
+    "            print(\"{} is not a prime number\".format(n))\n",
+    "    \n",
+    "    def prime_mul(self, n):\n",
+    "\n",
+    "\n",
+    "        a = []\n",
+    "        for i in range(2, n):\n",
+    "            if n % i == 0:\n",
+    "                a.append(i)\n",
+    "\n",
+    "        b = []\n",
+    "        for i in a:\n",
+    "            if prime_number(i) == True:\n",
+    "                b.append(i)\n",
+    "\n",
+    "        c = []\n",
+    "        for i in range(len(b)):\n",
+    "            for j in range(len(b)):\n",
+    "                if b[i] * b[j] == n:\n",
+    "                    c.append(b[i])\n",
+    "\n",
+    "        return c\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prime_number' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-27cecd3e9fc4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mis_prime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mprime_mul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m143\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-9ff58e719ade>\u001b[0m in \u001b[0;36mprime_mul\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mb\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mprime_number\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m                 \u001b[0mb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'prime_number' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a = is_prime()\n",
+    "a.prime_mul(143)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "metadata": {},
    "outputs": [
@@ -410,14 +534,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "31254\n"
+      "[12345, 12354, 12435, 12453, 12534, 12543, 13245, 13254, 13425, 13452, 13524, 13542, 14235, 14253, 14325, 14352, 14523, 14532, 15234, 15243, 15324, 15342, 15423, 15432, 21345, 21354, 21435, 21453, 21534, 21543, 23145, 23154, 23415, 23451, 23514, 23541, 24135, 24153, 24315, 24351, 24513, 24531, 25134, 25143, 25314, 25341, 25413, 25431, 31245, 31254, 31425, 31452, 31524, 31542, 32145, 32154, 32415, 32451, 32514, 32541, 34125, 34152, 34215, 34251, 34512, 34521, 35124, 35142, 35214, 35241, 35412, 35421, 41235, 41253, 41325, 41352, 41523, 41532, 42135, 42153, 42315, 42351, 42513, 42531, 43125, 43152, 43215, 43251, 43512, 43521, 45123, 45132, 45213, 45231, 45312, 45321, 51234, 51243, 51324, 51342, 51423, 51432, 52134, 52143, 52314, 52341, 52413, 52431, 53124, 53142, 53214, 53241, 53412, 53421, 54123, 54132, 54213, 54231, 54312, 54321]\n"
      ]
     }
    ],
@@ -435,7 +559,7 @@
     "                    if len({i,j,k,l,m}) == 5: #len을 해줘야 5개인 set만 표기\n",
     "                        num_list.append(int(nstr))\n",
     "num_list.sort()\n",
-    "print(num_list[49])"
+    "print(num_list)"
    ]
   },
   {
