--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,64 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "insert number b/w 1 and 2: 2\n",
-      "Failed! 1 1 1\n"
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53, 59, 61, 67, 71, 73, 79, 83, 89, 97, 101, 103, 107, 109, 113, 127, 131, 137, 139, 149, 151, 157, 163, 167, 173, 179, 181, 191, 193, 197, 199, 211, 223, 227, 229, 233, 239, 241, 251, 257, 263, 269, 271, 277, 281, 283, 293, 307, 311, 313, 317, 331, 337, 347, 349, 353, 359, 367, 373, 379, 383, 389, 397, 401, 409, 419, 421, 431, 433, 439, 443, 449, 457, 461, 463, 467, 479, 487, 491, 499, 503, 509, 521, 523, 541, 547, 557, 563, 569, 571, 577, 587, 593, 599, 601, 607, 613, 617, 619, 631, 641, 643, 647, 653, 659, 661, 673, 677, 683, 691, 701, 709, 719, 727, 733, 739, 743, 751, 757, 761, 769, 773, 787, 797, 809, 811, 821, 823, 827, 829, 839, 853, 857, 859, 863, 877, 881, 883, 887, 907, 911, 919, 929, 937, 941, 947, 953, 967, 971, 977, 983, 991, 997]\n"
      ]
     }
    ],
    "source": [
-    "import random\n",
-    "num1, num2, num3 = random.randint(1,2), random.randint(1,4), random.randint(1,8)\n",
-    "\n",
-    "\n",
-    "n = int(input(\"insert number b/w 1 and 2: \"))\n",
-    "if n == num1:\n",
-    "    n2 = int(input(\"insert number b/w 1 and 4: \"))\n",
-    "    if n2 == num2:\n",
-    "        n3 = int(input(\"insert number b/w 1 and 8: \"))\n",
-    "        if n3 == num3:\n",
-    "            print(\"Congrats!\")\n",
-    "else:\n",
-    "    print(\"Failed!\", num1, num2, num3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Hyundai', 'Benz', 'Kia', 'BMW']\n",
-      "True\n"
-     ]
-    }
-   ],
-   "source": [
-    "#164 cars의 원소를 섞고, 맨앞의 문자열이 Hyundai일경우 True를 출력하시오\n",
-    "\n",
-    "from random import shuffle\n",
-    "cars = [\"Hyundai\", \"Kia\", \"BMW\", \"Benz\"]\n",
-    "\n",
-    "\n",
-    "shuffle(cars)\n",
-    "print(cars)\n",
-    "if cars[0] == \"Hyundai\":\n",
-    "    print(\"True\")"
+    "from sympy import sieve\n",
+    "print([i for i in sieve.primerange(2, 1000)])"
    ]
   },
   {
@@ -71,68 +27,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#170 while활용, 작은수에서 큰수를 입력받아 5의배수를 나타내시오. ex) 7, 34 -> 10,15,20,25,30"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "insert number7\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = int(input(\"insert number\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def solution(x, n):\n",
-    "    answer = []\n",
-    "    for i in range(1, n+1):\n",
-    "        answer.append(x * i)\n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 4, 6, 8, 10]"
+       "495"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution(2,5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### len(5)+1"
+    "clock = 0\n",
+    "\n",
+    "for i in range(24):\n",
+    "    for j in range(60):\n",
+    "        three = str(i) + str(j)\n",
+    "        if \"3\" in three:\n",
+    "            clock += 1\n",
+    "            \n",
+    "clock"
    ]
   },
   {
@@ -141,8 +59,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "5\t[2, 1, 2, 6, 2, 4, 3, 3]\t[3,4,2,1,5]\n",
-    "4\t[4,4,4,4,4]\t[4,1,2,3]"
+    "myset = set()\n",
+    "for a in range(1, 100):\n",
+    "    for b in range(1, 100):\n",
+    "        for c in range(1, 100):\n",
+    "            if a + b + c == 100:\n",
+    "                myset.update({a, b, c})"
    ]
   },
   {
@@ -157,113 +79,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def solution(N, stages):\n",
-    "    answer = []\n",
-    "    return answer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stage 5개있고, len(stages) = 스테이지 번호숫자 => 1 2 3 4 5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stages.sort(reverse=True)\n",
-    "\n",
-    "\n",
-    "for i in range(1, N+1):\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stages = [2, 1, 2, 6, 2, 4, 3, 3]\n",
-    "stages.sort()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 2, 2, 3, 3, 4, 6]"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "stages"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.14285714285714285\n",
-      "0.3333333333333333\n",
-      "0.3333333333333333\n",
-      "0.3333333333333333\n",
-      "0.6\n",
-      "0.6\n",
-      "1.0\n",
-      "3.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in stages:\n",
-    "    print(i / (len(stages) - i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 1\n",
-      "2 3\n",
-      "2 3\n",
-      "2 3\n",
-      "3 2\n",
-      "3 2\n",
-      "4 1\n",
-      "6 1\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "    "
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -274,82 +90,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if 4<= len(s) and 6 >= len(s) and s in \"1234567890\":\n",
-    "    print(\"True\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 107,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 107,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"1234\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "s = \"a234\""
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def alpha_string46(s):\n",
-    "    return s.isdigit() and (len(s) == 4 or len(s) == 6)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s.isdigit()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
