--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,6 @@
     "        a += int(str(n)[i])\n",
     "    return a + n\n",
     "d(111)\n",
-    "\n",
     "\n",
     "def isSelfnum(n):\n",
     "    boolean = True\n",
@@ -238,9 +237,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
+      "Wall time: 21 µs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[1,\n",
+       " 3,\n",
+       " 5,\n",
+       " 7,\n",
+       " 9,\n",
+       " 20,\n",
+       " 31,\n",
+       " 42,\n",
+       " 53,\n",
+       " 64,\n",
+       " 75,\n",
+       " 86,\n",
+       " 97,\n",
+       " 108,\n",
+       " 110,\n",
+       " 121,\n",
+       " 132,\n",
+       " 143,\n",
+       " 154,\n",
+       " 165,\n",
+       " 176,\n",
+       " 187,\n",
+       " 198,\n",
+       " 209,\n",
+       " 211,\n",
+       " 222,\n",
+       " 233,\n",
+       " 244,\n",
+       " 255,\n",
+       " 266,\n",
+       " 277,\n",
+       " 288,\n",
+       " 299,\n",
+       " 310,\n",
+       " 312,\n",
+       " 323,\n",
+       " 334,\n",
+       " 345,\n",
+       " 356,\n",
+       " 367,\n",
+       " 378,\n",
+       " 389,\n",
+       " 400,\n",
+       " 411,\n",
+       " 413,\n",
+       " 424,\n",
+       " 435,\n",
+       " 446,\n",
+       " 457,\n",
+       " 468,\n",
+       " 479,\n",
+       " 490,\n",
+       " 501,\n",
+       " 512,\n",
+       " 514,\n",
+       " 525,\n",
+       " 536,\n",
+       " 547,\n",
+       " 558,\n",
+       " 569,\n",
+       " 580,\n",
+       " 591,\n",
+       " 602,\n",
+       " 613,\n",
+       " 615,\n",
+       " 626,\n",
+       " 637,\n",
+       " 648,\n",
+       " 659,\n",
+       " 670,\n",
+       " 681,\n",
+       " 692,\n",
+       " 703,\n",
+       " 714,\n",
+       " 716,\n",
+       " 727,\n",
+       " 738,\n",
+       " 749,\n",
+       " 760,\n",
+       " 771,\n",
+       " 782,\n",
+       " 793,\n",
+       " 804,\n",
+       " 815,\n",
+       " 817,\n",
+       " 828,\n",
+       " 839,\n",
+       " 850,\n",
+       " 861,\n",
+       " 872,\n",
+       " 883,\n",
+       " 894,\n",
+       " 905,\n",
+       " 916,\n",
+       " 918,\n",
+       " 929,\n",
+       " 940,\n",
+       " 951,\n",
+       " 962,\n",
+       " 973,\n",
+       " 984,\n",
+       " 995]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%time\n",
     "[i for i in range(1, 1000) if isSelfnum(i)]"
