--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,89 +2,124 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def num_1(n):\n",
+    "    case = 0\n",
+    "    \n",
+    "    for i in range(n+1):\n",
+    "        num = i\n",
+    "        while num != 0:\n",
+    "            if num % 10 == 1:\n",
+    "                case += 1\n",
+    "            num //= 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['0', '1', '2', '3', '4', '5', '6', '7', '8', '9', '10', '11', '12', '13']"
+       "1"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def num_1(n):\n",
-    "    case = 0\n",
-    "    for i in range(n+1):\n",
-    "        num = i\n",
-    "        while num !=0:\n",
-    "            if num % 10 == 1:\n",
-    "                case += 1\n",
-    "            num //= 10\n",
-    "            \n",
-    "    return case\n",
-    "            "
+    "15 // 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'startswith'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-131-c5cc99b00cef>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"1\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'list' object has no attribute 'startswith'"
-     ]
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a.startswith(\"1\")"
+    "1 // 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 135,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 135,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 136,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "114"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def d(n):\n",
+    "    a = 0\n",
+    "    for i in range(len(str(n))):\n",
+    "        a += int(str(n)[i])\n",
+    "    return a + n\n",
+    "d(111)"
+   ]
   },
   {
    "cell_type": "code",
