feat: modifieid review 220~

--- a/problems-review/201~219.ipynb
+++ b/problems-review/201~219.ipynb
@@ -237,15 +237,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3 µs, sys: 0 ns, total: 3 µs\n",
-      "Wall time: 21 µs\n"
+      "CPU times: user 2 µs, sys: 1e+03 ns, total: 3 µs\n",
+      "Wall time: 4.77 µs\n"
      ]
     },
     {
@@ -355,7 +355,7 @@
        " 995]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
