--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -173,6 +173,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.arange(16).reshape(4,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
@@ -259,7 +268,8 @@
     }
    ],
    "source": [
-    "#228 다음과 같이 5행 5열의 2차원 배열에 랜덤으로 1~25 사이의 수를 저장후, 2차원 배열의 수들의 평균이 12.5일경우 BIG 아니면 Small을 프린트하도록 하시오\n",
+    "#228 다음과 같이 5행 5열의 2차원 배열에 랜덤으로 1~25 사이의 수를 저장후, \n",
+    "#2차원 배열의 수들의 평균이 12.5 이상일경우 BIG 아니면 Small을 프린트하도록 하시오\n",
     "import random\n"
    ]
   },
@@ -289,6 +299,40 @@
     "    print(average,\"Big\")\n",
     "else:\n",
     "    print(average,\"Small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[19, 17, 25, 12, 22] Big\n",
+      "[14, 15, 10, 12, 24] Big\n",
+      "[16, 25, 15, 15, 9] Big\n",
+      "[16, 22, 2, 3, 18] Small\n",
+      "[7, 23, 11, 25, 13] Big\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "import statistics\n",
+    "\n",
+    "array = [[0] * 5 for i in range(5)]\n",
+    "for i in range(25):\n",
+    "    array[i//5][i%5] = random.randint(1,25)\n",
+    "\n",
+    "\n",
+    "for i in range(5):\n",
+    "    if statistics.mean(array[i]) >= 12.5:\n",
+    "        print(array[i], \"Big\")\n",
+    "    else:\n",
+    "        print(array[i], \"Small\")\n",
+    "        "
    ]
   },
   {
@@ -329,6 +373,19 @@
     "    print(\"Big\")\n",
     "else:\n",
     "    print(\"Small\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.empty((5,5))\n",
+    "for i in range(5):\n",
+    "    for j in range(5):\n",
+    "        a[i][j] = random.randrange(1,26)\n",
+    "a"
    ]
   },
   {
@@ -397,6 +454,23 @@
     "    return num\n",
     "\n",
     "print(\"upper   :\",numOfsupp(Sentence),    \"lower    :\", numOflow(Sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = input(\"insert your sentence\")\n",
+    "Upper = 0\n",
+    "Lower = 0\n",
+    "for i in range(len(a)):\n",
+    "    if chr(65) <= a[i] <= chr(90):\n",
+    "        Upper += 1\n",
+    "    elif chr(97) <= a[i] <= chr(122):\n",
+    "        Lower += 1\n",
+    "print(\"Upper: \", Upper, \"Lower\", Lower)"
    ]
   },
   {
