--- a/problems-review/note.ipynb
+++ b/problems-review/note.ipynb
@@ -2,45 +2,59 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 1, 2],\n",
-       "       [1, 2, 3],\n",
-       "       [2, 3, 4]])"
-      ]
-     },
-     "execution_count": 171,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.array([[0,1,2],[1,2,3],[2,3,4]])"
+    "a = \"Merry Christmas\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
+       "'samtsirhC yrreM'"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[num for num in np.arange(1,21) if num % 2 == 0]"
+    "a[::-1]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Merry Christmas']"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
