--- a/problems-review/220~250.ipynb
+++ b/problems-review/220~250.ipynb
@@ -593,6 +593,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = int(input(\"inserted number: \"))\n",
+    "\n",
+    "array = [0] * a * 2\n",
+    "\n",
+    "for i in range(a):\n",
+    "    array[i] = 1+ 2*i\n",
+    "    array[-i-1] = 2*i+2\n",
+    "array"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -613,13 +629,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[16, 27]\n",
+      "[39, 100]\n",
+      "[19, 88]\n",
       "[21, 69, 53]\n",
       "24 71 \n",
       "48.166666666666664\n"
